# opencv-python-openvino-backend

./: .gitignore  CMakeLists.txt  README.md  build-opencv-with-openvino-backend.sh  check.py
samples/: main.cpp  main.py
